--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/" class="">Home<br></a></li>
+          <li><a href="index.html" class="">Home<br></a></li>
           <li><a href="ht.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
