--- a/service-details.html
+++ b/service-details.html
@@ -48,7 +48,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="">Home<br></a></li>
+          <li><a href="index.html#about" class="">Home<br></a></li>
           <li><a href="ht.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
