product-page.html

--- a/product-page.html
+++ b/product-page.html
@@ -110,8 +110,8 @@
     <section  class="card card-dark my-2 p-0 p-2">
         <img id="product-image" class="card-img-top"  alt="Product 1">
         <div class="card-body">
-            <h5 class="card-title" id="product-title">Product 1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, voluptate rerum minima itaque debitis maxime ratione aliquid voluptas amet voluptates?</p>
+            <h5 class="card-title" id="API Management Platform (API Hub)">Product 1</h5>
+            <p class="card-text">API Hub is a scalable API management platform that simplifies the creation, deployment, and management of APIs. It provides a centralized dashboard for monitoring API performance, usage analytics, and access controls. API Hub includes features like API versioning, throttling, caching, and rate limiting to ensure optimal performance and security. With developer-friendly documentation tools and seamless integration with existing systems, API Hub helps organizations maximize the value of their APIs.</p>
         </div>
     </section><!-- /Starter Section Section -->
 
